GNOME Bugzilla – Bug 626754
nautilus_sendto_init leaks GFiles
Last modified: 2010-08-16 15:24:23 UTC
One per file parsed.
We're also leaking "f" in send_button_cb()
commit 1f237869181802649dfb2567c20a6e80e9ee07f1 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Aug 16 16:21:05 2010 +0100 Fix a few memory leaks On startup, and when sending packed files https://bugzilla.gnome.org/show_bug.cgi?id=626754
in both gnome-2-28 and gnome-2-32. Master doesn't have that code any more.