Fix a few memory leaks

On startup, and when sending packed files

https://bugzilla.gnome.org/show_bug.cgi?id=626754